--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,9 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-image: url(../images/background.png);
+    background-image: url(../images/background.jpg);
     background-size: cover;
+    background-repeat: no-repeat;
     margin: 0;
     padding: 0;
   }
