--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-image: url(../images/background.jpg);
+    background-image: url(../images/fundo.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     margin: 0;
